[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.18"
base58 = "0.2"
dotenvy = "0.15"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
spl-token = "4"
base64 = "0.21"